--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "async-mutex": "^0.4.0",
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -23,6 +25,7 @@
     "react": "18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.0",
     "sass": "^1.63.4",
     "sweetalert2": "^11.7.12",
     "typescript": "5.1.3"
