--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.6",
     "node-sass": "^9.0.0",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.5",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
